--- a/wercker.yml
+++ b/wercker.yml
@@ -15,7 +15,7 @@ build:
     - internal/docker-push:
       username: $DOCKER_USERNAME
       password: $DOCKER_PASSWORD
-      repository: wercker/api
+      repository: mwhooker/ws_api
       cmd: python /pipeline/source/app.py
     - script:
         name: forward deployment scripts
