--- a/wercker.yml
+++ b/wercker.yml
@@ -12,6 +12,14 @@ build:
   box: python:2.7
   steps:
     - pip-install
+    - script:
+        name: test
+        code: python /pipeline/source/app_test.py
+
+push:
+  box: python:2.7
+  steps:
+    - pip-install
     - internal/docker-push:
       username: $DOCKER_USERNAME
       password: $DOCKER_PASSWORD
@@ -21,7 +29,7 @@ build:
         name: forward deployment scripts
         code: cp ws_api.json $WERCKER_OUTPUT_DIR/
 
-deploy-to-dcos:
+dcos-create:
   box:
     id: buildpack-deps:jessie
   steps:
@@ -35,3 +43,18 @@ deploy-to-dcos:
             curl --fail --write-out "\n\nStatus code: %{http_code}\n" \
             -H "Authorization: token=${TOKEN}" -H "Content-type: application/json" \
             -X POST -d @ws_api.json $MARATHON_URL
+
+dcos-update:
+  box:
+    id: buildpack-deps:jessie
+  steps:
+    - script:
+        name: generate forward deploy script
+        code: |
+            cat ws_api.json
+    - script:
+        name: marathon deploy
+        code: |
+            curl --fail --write-out "\n\nStatus code: %{http_code}\n" \
+            -H "Authorization: token=${TOKEN}" -H "Content-type: application/json" \
+            -X PUT -d @ws_api.json $MARATHON_URL/counter
